# djem

./: .deepsource.toml  .gitignore  .ignore  .readthedocs.yml  .travis.yml  CHANGELOG.rst  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  Vagrantfile  bootstrap.sh  dev_requirements.txt  docker-compose.yml  jog.py  manage.py  package.json  provision.sh  pyproject.toml  rtd_settings.py  settings.py  setup.cfg  setup.py  test_settings.py  testsettings.py  tox.coverage.py  tox.ini  urls.py
.github/workflows/: lint.yml  test.yml
django_goodies/: __init__.py  auth.py  decorators.py  exceptions.py  forms.py  managers.py  misc.py  models.py
django_goodies/forms/: __init__.py  fields.py
django_goodies/models/: __init__.py  fields.py  managers.py  models.py
django_goodies/templates/goodies/: pagination.html
django_goodies/templates/goodies/csrfify_ajax/: jquery.js
django_goodies/templatetags/: goodies.py
django_goodies/tests/: models.py  test_auth.py  test_forms.py  test_misc.py  test_models.py  test_templatetags.py  test_utils.py  tests.py  urls.py  views.py
django_goodies/tests/app/: models.py  urls.py  views.py
django_goodies/tests/app/templates/app/: ifnotperm_test.html  ifperm_test.html
django_goodies/utils/: dev.py  dt.py  inspect.py  mon.py  table.py  tests.py  verify.py
djem/: __init__.py  ajax.py  auth.py  exceptions.py  middleware.py  misc.py  pagination.py
djem/forms/: __init__.py  bases.py  fields.py
djem/models/: __init__.py  fields.py  managers.py  models.py
djem/templates/djem/: form_field.html  pagination.html
djem/templates/djem/csrfify_ajax/: jquery.html
djem/templatetags/: djem.py
djem/tests/: __init__.py  checks.py  models.py  test_ajax.py  test_auth.py  test_forms.py  test_middleware.py  test_misc.py  test_models.py  test_pagination.py  test_templatetags.py  test_utils.py
djem/tests/app/: models.py  urls.py  views.py
djem/tests/app/templates/app/: ifnotperm_test.html  ifperm_test.html
djem/utils/: dev.py  dt.py  inspect.py  messages.py  misc.py  mon.py  table.py  tests.py
djem_dev/management/commands/: shell.py
docs/: Makefile  conf.py  index.rst  requirements.txt  verify-decorator.rst
docs/_ext/: djangodocs.py
docs/ref/: ajax.rst  auth.rst  dateutils.rst  exceptions.rst  form_fields.rst  forms.rst  index.rst  managers.rst  messageutils.rst  middleware.rst  model_fields.rst  models.rst  other.rst  pagination.rst  settings.rst  template_tags.rst  testutils.rst
docs/ref/utils/: datetime.rst  dev.rst  general.rst  index.rst  monitors.rst  test.rst
docs/topics/: ajax.rst  forms.rst  helpers.rst  index.rst  logging.rst  messages.rst  models.rst  monitors.rst  pagination.rst  permissions.rst  testing.rst  utils.rst
docs/topics/permissions/: advanced.rst  checking.rst  index.rst  intro.rst
provision/: bootstrap.sh  pip-virtualenv.sh  postgres-repo.sh  postgres.sh  project.sh  settings.sh  versions.sh  write-env-settings.sh
provision/scripts/: python.sh
