[tool.coverage.run]
source = ["djem"]

# Keep .coverage directory out of the shared folder. This avoids needing to
# sync all the files and configure them to be ignored.
data_file = "/tmp/.coverage"

[tool.coverage.report]
exclude_also = [
    "def __repr__"
]

[tool.jogger.lint]
fable_exclude = [
    "./.volumes/*",
    "./.ruff_cache/*",
    "./htmlcov/*",
    "./docs/_build/*"
]

[tool.ruff]
line-length = 79
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = [
    # Flake8 and plugins
    "A",      # flake8-builtins
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DJ",     # flake8-django
    "EM",     # flake8-errmsg
    "INP",    # flake8-no-pep420
    "INT",    # flake8-gettext (internationalisation)
    "ISC",    # flake8-implicit-str-concat
    "N",      # flake8-naming
    "PERF",   # flake8-perflint
    "PGH",    # flake8-pygrep-hooks
    "PIE",    # flake8-pie
    "RET",    # flake8-return
    "RSE",    # flake8-raise
    "S",      # flake8-bandit (security)
    "SIM",    # flake8-simplify
    
    # Others
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    
    "C90",    # McCabe complexity
    "COM818", # disallow trailing comma on bare tuples
    "F",      # pyflakes
    "FLY",    # flynt (static-join-to-f-string)
    "I",      # isort
    "PL",     # pylint
    "UP",     # pyupgrade
    "FURB",   # refurb
    "RUF",    # ruff
]

ignore = [
    "W293",    # blank line contains whitespace
    "PIE790",  # unnecessary `pass` statement
    "RUF012",  # annotate mutable class attributes
    "RUF022",  # unsorted `__all__` definition
    
    # Use `contextlib.suppress()` over `try`-`except`-`pass`. There's no
    # substantial benefit, and it requires extra imports over simple builtins.
    "SIM105",
    
    # Use ternary operators in place of `if`-`else` blocks that assign to
    # the same variable. This harms readability more often than not, and
    # affects measurement of code coverage.
    "SIM108",
    
    # Prefer multi-context `with` statements over multiple `with` statements.
    # Depending on the statement itself, e.g. mocks in tests, this can be
    # *less* readable.
    "SIM117",
    
    # Method could be a function. Too many false positives for methods designed
    # to be overridden in subclasses, where either the default implementation
    # or certain subclass implementations don't utilise `self`, but other
    # subclass implementations do.
    "PLR6301",
]

# As of Ruff version 0.14.10, there are many useful rules such as E303 & W391
# that are still in preview. Enable all preview rules for now.
preview = true

[tool.ruff.lint.per-file-ignores]
# Do not care that test-only models do not define __str__
"djem/tests/models.py" = ["DJ008"]

# Test cases inherently have a lot of public methods
"djem/tests/*" = ["PLR0904"]

[tool.ruff.lint.pycodestyle]
max-line-length = 119
max-doc-length = 119

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "django",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.isort.sections]
"django" = ["django"]

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
