[jogger:lint]
fable_exclude =
    ./.volumes/*
    ./htmlcov/*
    ./docs/_build/*
bandit_exclude =
    tests

[jogger:release]
authoritative_version_path = ./djem/__init__.py
sphinx_conf_path = ./docs/conf.py
major_version_format = ^\d+\.\d+
release_branch_format = release-{major_version}

[flake8]
exclude =
    .git
    .volumes
    __pycache__
    setup.py
    docs
    migrations
max-line-length = 119
max-complexity = 10
ignore =
    # blank line contains whitespace
    W293
    # superseded by W504 due to a recommendation change in PEP8
    W503

[isort]
skip =
    .git
    .volumes
    setup.py
    docs
    migrations
line_length = 99
wrap_length = 79
multi_line_output = 5
extra_standard_library = pytz
known_django = django
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[coverage:run]
source = djem

# Keep .coverage directory out of the shared folder. This avoids needing to sync
# all the files and configure them to be ignored.
data_file = /tmp/.coverage

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__

[metadata]
name = djem
version = attr: djem.__version__
author = Alex Church
author_email = alex@church.id.au
description = A collection of useful stuff for Django projects
long_description = file: README.rst
license = BSD
url = https://github.com/oogles/djem
project_urls =
    Documentation = https://djem.readthedocs.io/en/latest/
    Bug Tracker = https://github.com/oogles/djem/issues
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires = Django>=2.2
